--- a/index.html
+++ b/index.html
@@ -7,229 +7,227 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-  body { background:#050505; font-family:sans-serif; }
-  .glass { background: rgba(255,255,255,.04); backdrop-filter: blur(16px); }
+  body { background:#050505; font-family:sans-serif; color:white; }
+  .glass { background:rgba(255,255,255,0.04); backdrop-filter:blur(16px); border-radius:16px; }
   .neon-red { box-shadow:0 0 25px rgba(220,38,38,.6); }
-  .signal { padding:1rem; border-radius:1rem; text-align:center; transition: all .3s; }
-  .signal:hover { transform:scale(1.05); }
-  .plane-icon { width:24px; height:24px; position:absolute; transform:translate(-12px,-12px); }
+  .btn-red { background:#dc2626; padding:12px 24px; border-radius:12px; font-weight:bold; cursor:pointer; transition:0.3s; }
+  .btn-red:hover { background:#b91c1c; }
+  .btn-gray { background:#111; padding:12px 24px; border-radius:12px; font-weight:bold; cursor:pointer; transition:0.3s; }
+  .btn-gray:hover { background:#222; }
+  .signal-card { padding:16px; border-radius:12px; text-align:center; transition:0.3s; }
 </style>
 </head>
-<body class="text-white">
+<body>
 
-<!-- ========================= PÁGINA 1 - LOGIN PRINCIPAL ========================= -->
-<div id="loginMain" class="min-h-screen flex items-center justify-center">
-  <div class="glass p-10 rounded-2xl w-full max-w-md border border-red-600/30">
-    <h1 class="text-3xl font-black mb-6 text-center text-red-600">WILLBOOT-PRO</h1>
-    <input id="userMain" placeholder="Usuário" class="w-full mb-4 p-3 rounded bg-black border border-gray-700"/>
-    <input id="passMain" type="password" placeholder="Senha" class="w-full mb-6 p-3 rounded bg-black border border-gray-700"/>
-    <button onclick="loginMain()" class="w-full bg-red-600 py-3 rounded font-bold neon-red hover:bg-red-700">🔐 ENTRAR</button>
-    <p class="text-center text-sm text-gray-400 mt-6">Acesso ao Dashboard • Sistema fechado</p>
+<!-- ========================= Página 1: Acesso ao Site ========================= -->
+<div id="page1" class="min-h-screen flex items-center justify-center">
+  <div class="glass p-10 w-full max-w-md border border-red-600/30">
+    <h1 class="text-3xl font-black text-red-600 mb-6 text-center">WILLBOOT-PRO</h1>
+    <input id="userMain" placeholder="Usuário" class="w-full mb-4 p-3 rounded bg-black border border-gray-700">
+    <input id="passMain" type="password" placeholder="Senha" class="w-full mb-6 p-3 rounded bg-black border border-gray-700">
+    <button class="btn-red w-full neon-red mb-4" onclick="loginMain()">🔐 ENTRAR</button>
+    <p class="text-center text-gray-400 text-sm">Acesso normal ao site</p>
   </div>
 </div>
 
-<!-- ========================= PÁGINA 2 - DASHBOARD ========================= -->
-<div id="dashboard" class="hidden max-w-7xl mx-auto px-6 py-10">
-
-  <!-- HEADER -->
-  <div class="glass p-6 rounded-xl flex flex-col md:flex-row justify-between items-center border border-red-600/20">
-    <div id="clockDash" class="text-red-500 font-bold"></div>
+<!-- ========================= Página 2: Dashboard Normal ========================= -->
+<div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10">
+  <!-- Header -->
+  <div class="glass p-6 flex flex-col md:flex-row justify-between items-center border border-red-600/20 mb-6">
+    <div id="clock2" class="text-red-500 font-bold"></div>
     <div class="flex gap-4 mt-4 md:mt-0">
-      <button onclick="generateSignals('dash')" class="bg-red-600 px-6 py-3 rounded font-bold hover:bg-red-700">🔥 GERAR SINAIS</button>
-      <button onclick="logoutMain()" class="bg-gray-800 px-6 py-3 rounded font-bold hover:bg-gray-700">🚪 SAIR</button>
+      <button class="btn-red" onclick="generateSignalsPage2()">🔥 GERAR SINAIS</button>
+      <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
     </div>
   </div>
 
-  <!-- SINAIS -->
-  <div id="signalsDash" class="grid md:grid-cols-3 gap-6 my-10"></div>
+  <!-- Sinais -->
+  <div id="signalsPage2" class="grid md:grid-cols-3 gap-6 my-10"></div>
 
-  <!-- GRÁFICO -->
-  <div class="glass p-6 rounded-xl border border-red-600/20 relative">
+  <!-- Escolha de casas de apostas -->
+  <div class="glass p-6 mb-6 border border-red-600/20">
+    <label class="mb-2 block font-bold">Escolha a Casa de Aposta:</label>
+    <select id="betHouse" class="w-full p-3 rounded bg-black border border-gray-700">
+      <option value="ElephantBet">ElephantBet</option>
+      <option value="BantuBet">BantuBet</option>
+      <option value="888Bet">888Bet</option>
+      <option value="TopAposta">TopAposta</option>
+    </select>
+  </div>
+
+  <!-- Gráfico -->
+  <div class="glass p-6 rounded-xl border border-red-600/20">
     <h3 class="text-center font-bold mb-4">📊 Performance IA (Histórico Real)</h3>
-    <canvas id="chartDash" height="120"></canvas>
+    <canvas id="chartPage2" height="120"></canvas>
   </div>
 
-  <!-- LOGIN VIP ABAIXO -->
-  <div class="mt-10 text-center glass p-8 rounded-xl border border-red-600/30">
+  <!-- Acesso VIP -->
+  <div class="glass p-8 mt-10 border border-red-600/30 text-center">
     <h2 class="text-2xl font-black text-red-600 mb-4">💎 ACESSO VIP</h2>
-    <input id="userVIP" placeholder="Usuário VIP" class="w-1/2 mb-4 p-3 rounded bg-black border border-gray-700"/>
-    <input id="passVIP" type="password" placeholder="Senha VIP" class="w-1/2 mb-6 p-3 rounded bg-black border border-gray-700"/>
-    <button onclick="loginVIP()" class="bg-red-600 px-10 py-4 rounded-xl font-black neon-red hover:bg-red-700">🔐 ENTRAR VIP</button>
-    <p class="text-gray-300 mt-4">Sinais premium • IA adaptativa • Histórico real</p>
+    <p class="text-gray-300 mb-4">Sinais ROSA de alta probabilidade • IA treinada com histórico real</p>
+    <input id="vipUser" placeholder="Usuário VIP" class="w-full mb-2 p-3 rounded bg-black border border-gray-700">
+    <input id="vipPass" type="password" placeholder="Senha VIP" class="w-full mb-4 p-3 rounded bg-black border border-gray-700">
+    <button class="btn-red neon-red w-full" onclick="loginVIP()">🔐 ENTRAR VIP</button>
+  </div>
+
+  <!-- Upload de histórico Aviator no final -->
+  <div class="glass p-6 mb-6 mt-10 border border-red-600/20 text-center">
+    <label class="block mb-2 font-bold">Enviar histórico Aviator (PNG/JPG)</label>
+    <input type="file" id="uploadHistory" accept="image/*" class="mb-4">
+    <button class="btn-red neon-red" onclick="analyzeHistory()">📊 ANALISAR</button>
+    <p id="historyResult" class="mt-2 text-gray-300"></p>
   </div>
 </div>
 
-<!-- ========================= PÁGINA 3 - VIP ========================= -->
-<div id="vipPage" class="hidden max-w-7xl mx-auto px-6 py-10">
+<!-- ========================= Página 3: VIP ========================= -->
+<div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10">
+  <h1 class="text-3xl font-black text-red-600 mb-6 text-center">💎 VIP - Sinais ROSA</h1>
 
-  <!-- HEADER VIP -->
-  <div class="glass p-6 rounded-xl flex flex-col md:flex-row justify-between items-center border border-red-600/20">
-    <div id="clockVIP" class="text-red-500 font-bold"></div>
-    <div class="flex gap-4 mt-4 md:mt-0">
-      <button onclick="generateSignals('vip')" class="bg-red-600 px-6 py-3 rounded font-bold hover:bg-red-700">🔥 GERAR SINAIS VIP</button>
-      <button onclick="logoutVIP()" class="bg-gray-800 px-6 py-3 rounded font-bold hover:bg-gray-700">🚪 SAIR VIP</button>
-    </div>
+  <!-- Horário -->
+  <div class="glass p-4 mb-6 text-center border border-red-600/20">
+    <div id="clock3" class="text-red-500 font-bold"></div>
   </div>
 
-  <!-- BOTÃO UPLOAD HISTÓRICO -->
-  <div class="mt-6 glass p-6 rounded-xl border border-red-600/30 text-center">
-    <input type="file" id="aviatorImg" accept="image/*" class="mb-4"/>
-    <button onclick="analyzeImage()" class="bg-red-600 px-6 py-3 rounded font-bold neon-red hover:bg-red-700">📷 ANALISAR HISTÓRICO</button>
-    <p id="analysisResult" class="mt-4 text-green-400 font-bold"></p>
-  </div>
+  <!-- Sinais ROSA -->
+  <div id="signalsVIP" class="grid md:grid-cols-3 gap-6 my-6"></div>
 
-  <!-- SINAIS VIP -->
-  <div id="signalsVIP" class="grid md:grid-cols-3 gap-6 my-10"></div>
-
-  <!-- GRÁFICO VIP -->
-  <div class="glass p-6 rounded-xl border border-red-600/20 relative">
-    <h3 class="text-center font-bold mb-4">📊 Performance VIP (Histórico Real)</h3>
+  <!-- Gráfico VIP -->
+  <div class="glass p-6 rounded-xl border border-red-600/20">
+    <h3 class="text-center font-bold mb-4">📊 Performance VIP (Aviator)</h3>
     <canvas id="chartVIP" height="120"></canvas>
-    <img id="plane" class="plane-icon" src="https://cdn-icons-png.flaticon.com/512/252/252025.png" alt="Avião Vermelho">
+  </div>
+
+  <div class="glass p-6 mt-6 text-center border border-red-600/30">
+    <p class="text-gray-300">Usuário VIP: William | Passe: 230220</p>
+  </div>
+
+  <!-- Upload de histórico Aviator VIP no final -->
+  <div class="glass p-6 mb-6 mt-10 border border-red-600/20 text-center">
+    <label class="block mb-2 font-bold">Enviar histórico Aviator VIP (PNG/JPG)</label>
+    <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-4">
+    <button class="btn-red neon-red" onclick="analyzeHistoryVIP()">📊 ANALISAR VIP</button>
+    <p id="historyResultVIP" class="mt-2 text-gray-300"></p>
   </div>
 </div>
 
 <script>
-/* ========================= LOGIN ========================= */
-function loginMain(){
-  if(userMain.value && passMain.value){
-    localStorage.setItem("accessMain","true");
-    document.getElementById("loginMain").classList.add("hidden");
-    document.getElementById("dashboard").classList.remove("hidden");
-    loadHistory('dash');
-  }
-}
-function logoutMain(){ localStorage.removeItem("accessMain"); location.reload(); }
-
-/* ========================= VIP ========================= */
-const VIP_USER = "William";
-const VIP_PASS = "230220";
-function loginVIP(){
-  if(userVIP.value===VIP_USER && passVIP.value===VIP_PASS){
-    localStorage.setItem("accessVIP","true");
-    document.getElementById("dashboard").classList.add("hidden");
-    document.getElementById("vipPage").classList.remove("hidden");
-    loadHistory('vip');
-  } else { alert("Usuário ou senha VIP incorretos"); }
-}
-function logoutVIP(){ localStorage.removeItem("accessVIP"); location.reload(); }
-
-/* ========================= CLOCK ========================= */
+// ========================= Relógios =========================
 setInterval(()=>{
-  clockDash.innerHTML = "🕐 Luanda • " + new Date().toLocaleString("pt-PT",{timeZone:"Africa/Luanda"});
-  clockVIP.innerHTML = clockDash.innerHTML;
+  const now = new Date().toLocaleString("pt-PT",{timeZone:"Africa/Luanda"});
+  if(document.getElementById("clock2")) clock2.innerHTML="🕐 "+now;
+  if(document.getElementById("clock3")) clock3.innerHTML="🕐 "+now;
 },1000);
 
-/* ========================= IA SINAIS ========================= */
-let historyDash = JSON.parse(localStorage.getItem("historyDash")||"[]");
-let historyVIP = JSON.parse(localStorage.getItem("historyVIP")||"[]");
-let chartDash, chartVIP;
+// ========================= Página 1: Login =========================
+function loginMain(){
+  const u=userMain.value, p=passMain.value;
+  if(u && p){
+    localStorage.setItem("mainAccess","true");
+    document.getElementById("page1").classList.add("hidden");
+    document.getElementById("page2").classList.remove("hidden");
+    loadHistoryPage2();
+  }
+}
+function logoutMain(){
+  localStorage.removeItem("mainAccess");
+  location.reload();
+}
+if(localStorage.getItem("mainAccess")) loginMain();
 
-function IA(tipo, isVIP=false){
+// ========================= Página 2: Sinais =========================
+let historyPage2 = JSON.parse(localStorage.getItem("historyPage2")||"[]");
+let chartPage2Obj;
+
+function IApage2(tipo){
   let mult, conf;
-  if(tipo==="azul"){ mult = (1.00 + Math.random()*0.99).toFixed(2); conf=Math.floor(65 + Math.random()*20); }
-  if(tipo==="roxo"){ mult = (2.00 + Math.random()*7.99).toFixed(2); conf=Math.floor(65 + Math.random()*25); }
-  if(tipo==="rosa"){ mult = (10 + Math.random()*400).toFixed(2); conf=isVIP? Math.floor(80 + Math.random()*19) : Math.floor(65 + Math.random()*30); }
+  if(tipo==="azul"){ mult=(1+Math.random()*0.99).toFixed(2); conf=Math.floor(60+Math.random()*35);}
+  if(tipo==="roxo"){ mult=(2+Math.random()*7.99).toFixed(2); conf=Math.floor(60+Math.random()*35);}
   return {mult, conf};
 }
 
-function generateSignals(page){
-  const tipos = [
-    {t:"AZUL",c:"cyan"},
-    {t:"ROXO",c:"purple"},
-    {t:"ROSA",c:"pink"}
-  ];
-
-  let container, hist;
-  let isVIP = page==='vip';
-
-  container = isVIP ? signalsVIP : signalsDash;
-  hist = isVIP ? historyVIP : historyDash;
-
-  container.innerHTML = tipos.map(x=>{
-    if(isVIP && x.t!=="ROSA") return ""; // VIP só ROSA
-    if(!isVIP && x.t==="ROSA") return ""; // Dashboard não mostra ROSA
-    let r = IA(x.t.toLowerCase(),isVIP);
-    hist.push(r.conf);
-    return `<div class="signal glass border border-${x.c}-500/40 text-center">
+function generateSignalsPage2(){
+  const tipos=[{t:"AZUL",c:"cyan"},{t:"ROXO",c:"purple"}];
+  signalsPage2.innerHTML = tipos.map(x=>{
+    let r = IApage2(x.t.toLowerCase());
+    historyPage2.push(r.conf);
+    return `<div class="signal-card glass border border-${x.c}-500/40">
       <h3 class="font-bold text-${x.c}-400 mb-2">SINAL ${x.t}</h3>
       <div class="text-4xl font-black text-${x.c}-300 mb-2">×${r.mult}</div>
       <p>Probabilidade: <b>${r.conf}%</b></p>
     </div>`;
   }).join("");
-
-  if(isVIP){ historyVIP = hist; localStorage.setItem("historyVIP",JSON.stringify(historyVIP)); updateChart('vip'); }
-  else { historyDash = hist; localStorage.setItem("historyDash",JSON.stringify(historyDash)); updateChart('dash'); }
+  localStorage.setItem("historyPage2",JSON.stringify(historyPage2));
+  updateChartPage2();
 }
 
-/* ========================= CHART ========================= */
-function loadHistory(page){ updateChart(page); }
+function loadHistoryPage2(){ updateChartPage2(); }
 
-function updateChart(page){
-  let hist = page==='vip'? historyVIP : historyDash;
-  if(hist.length>50) hist=hist.slice(-50);
-  if(page==='vip'){ historyVIP = hist; localStorage.setItem("historyVIP",JSON.stringify(hist)); }
-  else { historyDash = hist; localStorage.setItem("historyDash",JSON.stringify(hist)); }
-
-  const ctx = page==='vip'? chartVIPEl.getContext("2d") : chartDashEl.getContext("2d");
-  if(page==='vip' && chartVIP) chartVIP.destroy();
-  if(page!=='vip' && chartDash) chartDash.destroy();
-
-  let dataset = {
-    data: hist,
-    borderColor: "#dc2626",
-    backgroundColor:"rgba(220,38,38,.2)",
-    tension:0.4,
-    fill:true
-  };
-
-  let chartObj = new Chart(ctx,{
+function updateChartPage2(){
+  if(historyPage2.length>50) historyPage2=historyPage2.slice(-50);
+  localStorage.setItem("historyPage2",JSON.stringify(historyPage2));
+  if(chartPage2Obj) chartPage2Obj.destroy();
+  chartPage2Obj = new Chart(chartPage2.getContext("2d"),{
     type:"line",
-    data:{ labels:hist.map((_,i)=>i+1), datasets:[dataset] },
-    options:{
-      plugins:{legend:{display:false}},
-      scales:{y:{min:60,max:100}},
-      animation:{duration:800}
-    }
+    data:{labels:historyPage2.map((_,i)=>i+1), datasets:[{data:historyPage2,borderColor:"#dc2626",backgroundColor:"rgba(220,38,38,.2)",tension:.4,fill:true}]},
+    options:{plugins:{legend:{display:false}}, scales:{y:{min:60,max:100}}}
   });
-
-  if(page==='vip'){
-    chartVIP = chartObj;
-    animatePlane(chartVIP, hist);
-  } else { chartDash = chartObj; }
 }
 
-const chartDashEl = document.getElementById("chartDash");
-const chartVIPEl = document.getElementById("chartVIP");
-const planeIcon = document.getElementById("plane");
-
-/* ========================= ANIMAÇÃO AVIÃO VIP ========================= */
-function animatePlane(chart, data){
-  if(data.length===0) return;
-  let meta = chart.getDatasetMeta(0);
-  let points = meta.data;
-  let i = 0;
-  function movePlane(){
-    if(i>=points.length) return;
-    let pos = points[i].getProps(['x','y'],true);
-    planeIcon.style.left = pos.x + 'px';
-    planeIcon.style.top = pos.y + 'px';
-    i++;
-    requestAnimationFrame(movePlane);
+// ========================= VIP =========================
+const vipUserData={user:"William",pass:"230220"};
+function loginVIP(){
+  const u=vipUser.value,p=vipPass.value;
+  if(u===vipUserData.user && p===vipUserData.pass){
+    document.getElementById("page2").classList.add("hidden");
+    document.getElementById("page3").classList.remove("hidden");
+    generateSignalsVIP();
+  }else{
+    alert("Usuário ou senha VIP incorretos");
   }
-  movePlane();
 }
 
-/* ========================= ANALISE IMAGEM AVIATOR ========================= */
-function analyzeImage(){
-  const file = document.getElementById("aviatorImg").files[0];
-  if(!file){ alert("Escolha uma imagem primeiro"); return; }
-  // Aqui você pode integrar OCR ou backend FastAPI
-  // Simulação: gerar chance aleatória de acerto
-  let chance = (80 + Math.random()*15).toFixed(2);
-  analysisResult.innerHTML = `Chance estimada de acerto com base no histórico: ${chance}%`;
+let historyVIP = JSON.parse(localStorage.getItem("historyVIP")||"[]");
+let chartVIPObj;
+
+function IA_VIP(){
+  let mult=(10+Math.random()*100).toFixed(2);
+  let conf=Math.floor(80+Math.random()*19); // sempre ≥80%
+  return {mult, conf};
+}
+
+function generateSignalsVIP(){
+  signalsVIP.innerHTML = "";
+  let r = IA_VIP();
+  historyVIP.push(r.conf);
+  signalsVIP.innerHTML = `<div class="signal-card glass border border-pink-500/40">
+    <h3 class="font-bold text-pink-400 mb-2">SINAL ROSA</h3>
+    <div class="text-4xl font-black text-pink-300 mb-2">×${r.mult}</div>
+    <p>Probabilidade: <b>${r.conf}%</b></p>
+  </div>`;
+  localStorage.setItem("historyVIP",JSON.stringify(historyVIP));
+  updateChartVIP();
+}
+
+function updateChartVIP(){
+  if(historyVIP.length>50) historyVIP=historyVIP.slice(-50);
+  localStorage.setItem("historyVIP",JSON.stringify(historyVIP));
+  if(chartVIPObj) chartVIPObj.destroy();
+  chartVIPObj = new Chart(chartVIP.getContext("2d"),{
+    type:"line",
+    data:{labels:historyVIP.map((_,i)=>i+1), datasets:[{data:historyVIP,borderColor:"#dc2626",backgroundColor:"rgba(220,38,38,.2)",tension:.4,fill:true}]},
+    options:{plugins:{legend:{display:false}}, scales:{y:{min:60,max:100}}}
+  });
+}
+
+// ========================= Upload Simulado =========================
+function analyzeHistory(){
+  const file=document.getElementById("uploadHistory").files[0];
+  if(file){historyResult.innerHTML="Simulação: chance de acerto 70%";}else{historyResult.innerHTML="Nenhum arquivo selecionado";}
+}
+function analyzeHistoryVIP(){
+  const file=document.getElementById("uploadHistoryVIP").files[0];
+  if(file){historyResultVIP.innerHTML="Simulação VIP: chance de acerto 90%";}else{historyResultVIP.innerHTML="Nenhum arquivo selecionado";}
 }
 </script>
-
 </body>
 </html>
